[metadata]
name = TileScraper
version = 0.1
author = Tavis Barr
author-email = tavisbarr@gmail.com
summary = This module pulls a panel of tile-composite images from MODIS satellites given latitude and longitude of the edges plus start and end dates.
description-file = README.txt
home-page = http://www.github.com/tavisbarr/tilescraper

classifier = Development Status :: 3 - Alpha
    License :: OSI Approved :: GNU Lesser General Public License v2 (LGPLv2) :: GNU LGPLv2

[files]
packages =
        tilescraper

extra_files =
        setup.py
        README.txt
